<resources>
    <string name="app_name">Housemate Hub</string>
    <string name="back4app_server_url">https://parseapi.back4app.com/</string>
    <string name="back4app_app_id">LlopvxgeTubz36E2RloIlZyVBjVsUUWeM9w3pezm</string>
    <string name="back4app_client_key">NuCOdVyXBrQneeR3oga5f8Mmk5QsnhRECWyc5Xw8</string>
    <string-array name="menu_options">
        <item>Log Out</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_label_expenses">Expenses</string>
    <string name="menu_label_calendar">Calendar</string>
    <string name="menu_label_home">Home</string>
    <string name="menu_label_lists">Lists</string>

    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="do_not_disturb">Do Not Disturb</string>
    <string name="group_name">Group Name</string>
    <string name="group_code">Group Code</string>
    <string name="log_out">Log Out</string>
    <string name="housemates">Housemates</string>
    <string name="log_out_successful">Log Out Successful</string>
    <string name="Recent">Recent</string>
    <string name="Upcoming">Upcoming</string>
</resources>
